--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,19 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=M+PLUS+1p:700');
 
+@media (prefers-color-scheme: light) {
+    --bg-color: white;
+    --font-color: black;
+}
+
+@media (prefers-color-scheme: dark) {
+    --bg-color: black;
+    --font-color: white;
+}
+
 body {
+    background-color: var(--bg-color);
+    color: var(--font-color);
     margin: 0px;
     padding: 0px;
     font-family: 'M PLUS 1p', sans-serif;
