--- a/css/index.css
+++ b/css/index.css
@@ -19,8 +19,10 @@ body {
     padding: 0px;
     font-family: 'M PLUS 1p', sans-serif;
     font-weight: bold;
+    font-size: 28px;
 }
 
 .center {
     text-align: center;
+    font-size: 34px;
 }
