--- a/css/index.css
+++ b/css/index.css
@@ -1,28 +1,45 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=M+PLUS+1p:700');
 
-/*
 @media (prefers-color-scheme: light) {
-    --bg-color: white;
-    --font-color: black;
+    body {
+        background-color: #F0F0F0;
+        color: #1A1A1A;
+        margin: 0px;
+        padding: 0px;
+        font-family: 'M PLUS 1p', sans-serif;
+        font-weight: bold;
+        font-size: 28px;
+    }
 }
 @media (prefers-color-scheme: dark) {
-    --bg-color: black;
-    --font-color: white;
-}
-*/
-
-body {
-    background-color: #1A1A1A;
-    color: #F0F0F0;
-    margin: 0px;
-    padding: 0px;
-    font-family: 'M PLUS 1p', sans-serif;
-    font-weight: bold;
-    font-size: 28px;
+    body {
+        background-color: #1A1A1A;
+        color: #F0F0F0;
+        margin: 0px;
+        padding: 0px;
+        font-family: 'M PLUS 1p', sans-serif;
+        font-weight: bold;
+        font-size: 28px;
+    }
 }
 
 .center {
     text-align: center;
     font-size: 34px;
+}
+
+@media screen and (max-width: 500px) {
+    /* スマートフォン */
+    
+}
+
+@media screen and (min-width: 500px) and (max-width: 1024px) {
+    /* タブレット縦 */
+    
+}
+
+@media screen and (min-width: 1025px) {
+    /* タブレット横、PC */
+
 }
