--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,15 @@
         font-size: 28px;
     }
 }
+body {
+    background-color: #1A1A1A;
+    color: #F0F0F0;
+    margin: 0px;
+    padding: 0px;
+    font-family: 'M PLUS 1p', sans-serif;
+    font-weight: bold;
+    font-size: 28px;
+}
 
 .center {
     text-align: center;
