違いをわかりやすく

--- a/css/index.css
+++ b/css/index.css
@@ -14,8 +14,8 @@
     }
 }
 body {
-    background-color: #1A1A1A;
-    color: #F0F0F0;
+    background-color: #F0F0F0;
+    color: #1A1A1A;
     margin: 0px;
     padding: 0px;
     font-family: 'M PLUS 1p', sans-serif;
