--- a/css/index.css
+++ b/css/index.css
@@ -23,9 +23,14 @@ body {
     }
 }
 
-.center {
+.main-center {
     text-align: center;
-    font-size: 34px;
+    font-size: 48px;
+}
+.sub-center {
+    text-align: center;
+    font-size: 24px;
+    color: #888888;
 }
 
 @media screen and (max-width: 500px) {
