--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,14 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css?family=M+PLUS+1p:700');
 
+:root {
+    --white: #F0F0F0;
+    --gray: #888888;
+    --black: #1A1A1A;
+    --main: #6b7d27;
+    --accent: #ee4b22;
+}
+
 body {
     background-color: #F0F0F0;
     color: #1A1A1A;
@@ -12,14 +20,14 @@ body {
 }
 @media (prefers-color-scheme: light) {
     body {
-        background-color: #F0F0F0;
-        color: #1A1A1A;
+        background-color: var(--white);
+        color: var(--black);
     }
 }
 @media (prefers-color-scheme: dark) {
     body {
-        background-color: #1A1A1A;
-        color: #F0F0F0;
+        background-color: var(--black);
+        color: var(--white);
     }
 }
 
@@ -30,7 +38,7 @@ body {
 .sub-center {
     text-align: center;
     font-size: 20px;
-    color: #888888;
+    color: var(--gray);
 }
 
 @media screen and (max-width: 500px) {
