--- a/css/index.css
+++ b/css/index.css
@@ -33,16 +33,16 @@ body {
 
 #title {
     height: 100%;
-    padding-top: 40%;
+    padding-top: 50vh;
 }
 
 .main-center {
     text-align: center;
-    font-size: 48px;
+    font-size: 10vmin;
 }
 .sub-center {
     text-align: center;
-    font-size: 20px;
+    font-size: 5vmin;
     color: var(--gray);
 }
 
