--- a/css/index.css
+++ b/css/index.css
@@ -38,7 +38,7 @@ body {
 }
 
 #title-circle {
-    text-align: center;
+    margin: auto;
     width: 30vmin;
     height: 30vmin;
     border-radius: 50%;
