--- a/css/index.css
+++ b/css/index.css
@@ -39,15 +39,11 @@ body {
 
 #title-circle {
     margin: auto;
-    padding: 10vmin;
+    padding: 20vmin, 10vmin;
     width: 40vmin;
     height: 40vmin;
     border-radius: 50%;
     background-color: var(--main);
-}
-
-.auto-margin {
-    margin: auto;
 }
 
 .main-center {
