paddingの値２つの時の書き方を修正

--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,7 @@ body {
 
 #title-circle {
     margin: auto;
-    padding: 20vmin, 10vmin;
+    padding: 20vmin 10vmin;
     width: 40vmin;
     height: 40vmin;
     border-radius: 50%;
