--- a/css/index.css
+++ b/css/index.css
@@ -39,8 +39,9 @@ body {
 
 #title-circle {
     margin: auto;
+    padding: 10vmin 0vmin;
     width: 40vmin;
-    height: 40vmin;
+    height: 20vmin;
     border-radius: 50%;
     background-color: var(--main);
 }
