grayの色を変更

--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
 :root {
     --white: #F0F0F0;
     --black: #1A1A1A;
-    --gray: #888888;
+    --gray: #b6b6b6;
     --main: #6b7d27;
     --accent: #ee4b22;
 }
