--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,7 @@ body {
     }
 }
 
-@keyframes title-center-scale {
+@keyframes title-circle-scale {
     from { transform: scale(0, 0); }
     to { transform: scale(1, 1); }
 }
@@ -48,7 +48,7 @@ body {
     height: 15vmin;
     border-radius: 50%;
     background-color: var(--main);
-    animation: title-cercle-scale 1s ease-in-out 2s 1 normal forwards running;
+    animation: title-circle-scale 1s ease-in-out 2s 1 normal forwards running;
 }
 
 .main-center {
