--- a/css/index.css
+++ b/css/index.css
@@ -32,8 +32,8 @@ body {
 }
 
 @keyframes title-circle-scale {
-    from { transform: scale(0, 0); }
-    to { transform: scale(1, 1); }
+    0% { transform: scale(0, 0); }
+    100% { transform: scale(1, 1); }
 }
 
 #title {
@@ -48,7 +48,7 @@ body {
     height: 15vmin;
     border-radius: 50%;
     background-color: var(--main);
-    animation: title-circle-scale 1s ease-in-out 2s 1 normal forwards running;
+    animation: title-circle-scale 2s ease-in-out 0s 1 normal forwards running;
 }
 
 .main-center {
