--- a/css/index.css
+++ b/css/index.css
@@ -33,6 +33,7 @@ body {
 
 @keyframes title-circle-scale {
     0% { transform: scale(0, 0); }
+    75% { transform: scale(0, 0); }
     100% { transform: scale(1, 1); }
 }
 
@@ -48,7 +49,7 @@ body {
     height: 15vmin;
     border-radius: 50%;
     background-color: var(--main);
-    animation: title-circle-scale 2s ease-in-out 0s 1 normal forwards running;
+    animation: title-circle-scale 4s ease-in-out 0s 1 normal forwards running;
 }
 
 .main-center {
