--- a/css/index.css
+++ b/css/index.css
@@ -34,6 +34,7 @@ body {
 @keyframes title-circle-scale {
     0% { transform: scale(0, 0); }
     75% { transform: scale(0, 0); }
+    97% { transform: scale(1.1, 1.1); }
     100% { transform: scale(1, 1); }
 }
 
