--- a/css/index.css
+++ b/css/index.css
@@ -37,6 +37,9 @@ body {
     95% { transform: scale(1.1, 1.1); }
     100% { transform: scale(1, 1); }
 }
+@keyframes title-circle-translate {
+    100% { transform: translateY(5vmin); }
+}
 
 #title {
     height: 100%;
@@ -48,7 +51,7 @@ body {
     width: 70vmin;
     height: 70vmin;
     border-radius: 50%;
-    background: linear-gradient(135deg, var(--main) 70%, var(--accent) 70%);
+    background: linear-gradient(135deg, var(--main) 50%, var(--accent) 50%);
     animation: title-circle-scale 3s ease-in-out 0s 1 normal forwards running;
 }
 #title-circle {
@@ -58,6 +61,7 @@ body {
     height: 15vmin;
     border-radius: 50%;
     background-color: var(--back);
+    animation: title-circle-translate 0s;
 }
 
 .main-center {
