--- a/css/index.css
+++ b/css/index.css
@@ -38,7 +38,7 @@ body {
     100% { transform: scale(1, 1); }
 }
 @keyframes title-circle-translate {
-    100% { transform: translateY(5vmin); }
+    100% { transform: translate(0vmin, 5vmin); }
 }
 
 #title {
