--- a/css/index.css
+++ b/css/index.css
@@ -31,20 +31,22 @@ body {
     font-size: 28px;
 }
 
+
+#title {
+    height: 100%;
+    padding-top: 25vh;
+    padding-bottom: 40vh;
+}
 @keyframes title-circle-scale {
     0% { transform: scale(0, 0); }
     70% { transform: scale(0, 0); }
     96% { transform: scale(1.1, 1.1); }
     100% { transform: scale(1, 1); }
 }
-@keyframes title-circle-translate {
-    100% { transform: translateY(5vmin); }
-}
-
-#title {
-    height: 100%;
-    padding-top: 25vh;
-    padding-bottom: 40vh;
+@keyframes title-circle-rotate {
+    0% { transform: rotateZ(0deg); }
+    60% { transform: rotateZ(-45deg); }
+    100% { transform: rotateZ(0deg); }
 }
 #title-circle-anim {
     margin: auto;
@@ -53,6 +55,10 @@ body {
     border-radius: 50%;
     background: linear-gradient(135deg, var(--main) 50%, var(--accent) 50%);
     animation: title-circle-scale 3s ease-in-out 0s 1 normal forwards running;
+    animation: title-circle-rotate 1s ease-in-out 3s 1 normal forwards running;
+}
+@keyframes title-circle-translate {
+    100% { transform: translateY(5vmin); }
 }
 #title-circle {
     margin: auto;
@@ -62,6 +68,18 @@ body {
     border-radius: 50%;
     background-color: var(--back);
     animation: title-circle-translate 3s step-start 0s 1 normal forwards running;
+}
+@keyframes title-main-text {
+    0% {  }
+}
+#title-main-text {
+    text-align: center;
+    font-size: 8vmin;
+}
+#title-sub-text {
+    text-align: center;
+    font-size: 2vmin;
+    color: var(--gray);
 }
 
 .main-center {
