--- a/css/index.css
+++ b/css/index.css
@@ -54,8 +54,8 @@ body {
     height: 70vmin;
     border-radius: 50%;
     background: linear-gradient(135deg, var(--main) 50%, var(--accent) 50%);
-    animation: title-circle-scale 3s ease-in-out 0s 1 normal forwards running;
-    animation: title-circle-rotate 1s ease-in-out 3s 1 normal forwards running;
+    animation: title-circle-scale 3s ease-in-out 0s 1 normal forwards running,
+                title-circle-rotate 1s ease-in-out 3s 1 normal forwards running;
 }
 @keyframes title-circle-translate {
     100% { transform: translateY(5vmin); }
