--- a/css/index.css
+++ b/css/index.css
@@ -37,29 +37,36 @@ body {
     padding-top: 25vh;
     padding-bottom: 40vh;
 }
-@keyframes title-circle-scale {
+@keyframes title-circle-edge-scale {
     0% { transform: scale(0, 0); }
     70% { transform: scale(0, 0); }
     96% { transform: scale(1.1, 1.1); }
     100% { transform: scale(1, 1); }
 }
-@keyframes title-circle-rotate {
+@keyframes title-circle-edge-rotate {
     0% { transform: rotateZ(0deg); }
     10% { transform: rotateZ(0deg); }
     80% { transform: rotateZ(-45deg); }
     100% { transform: rotateZ(0deg); }
 }
-#title-circle-anim {
+#title-circle-edge {
     margin: auto;
     width: 70vmin;
     height: 70vmin;
     border-radius: 50%;
     background: linear-gradient(135deg, var(--main) 50%, var(--accent) 50%);
-    animation: title-circle-scale 3s ease-in-out 0s 1 normal forwards running,
-                title-circle-rotate 1s ease-in-out 3s 1 normal forwards running;
+    animation: title-circle-edge-scale 3s ease-in-out 0s 1 normal forwards running,
+                title-circle-edge-rotate 1s ease-in-out 3s 1 normal forwards running;
 }
 @keyframes title-circle-translate {
     100% { transform: translateY(5vmin); }
+}
+@keyframes title-circle-rotate {
+    0% { transform: rotateZ(0deg); }
+    25% { transform: rotateZ(90deg); }
+    50% { transform: rotateZ(180deg); }
+    75% { transform: rotateZ(270deg); }
+    100% { transform: rotateZ(360deg); }
 }
 #title-circle {
     margin: auto;
@@ -68,19 +75,25 @@ body {
     height: 15vmin;
     border-radius: 50%;
     background-color: var(--back);
-    animation: title-circle-translate 3s step-start 0s 1 normal forwards running;
+    animation: title-circle-translate 3s step-start 0s 1 normal forwards running,
+                title-circle-rotate 0.5s ease-in-out 4s 1 normal forwards running;
 }
-@keyframes title-main-text {
-    0% {  }
+@keyframes title-text-fadein {
+    0% { opacity: 0; }
+    /* about 4s~ */
+    90% { opacity: 0; }
+    100% { opacity: 1; }
 }
 #title-main-text {
     text-align: center;
     font-size: 8vmin;
+    animation: title-text-fadein 4.5s ease-in-out 0s 1 normal forwards running;
 }
 #title-sub-text {
     text-align: center;
     font-size: 2vmin;
     color: var(--gray);
+    animation: title-text-fadein 4.5s ease-in-out 0s 1 normal forwards running;
 }
 
 .main-center {
