--- a/css/index.css
+++ b/css/index.css
@@ -61,13 +61,6 @@ body {
 @keyframes title-circle-translate {
     100% { transform: translateY(5vmin); }
 }
-@keyframes title-circle-rotate {
-    0% { transform: rotateZ(0deg); }
-    25% { transform: rotateZ(90deg); }
-    50% { transform: rotateZ(180deg); }
-    75% { transform: rotateZ(270deg); }
-    100% { transform: rotateZ(360deg); }
-}
 #title-circle {
     margin: auto;
     padding: 22.5vmin 0vmin;
@@ -78,6 +71,13 @@ body {
     animation: title-circle-translate 3s step-start 0s 1 normal forwards running,
                 title-circle-rotate 0.5s ease-in-out 4s 1 normal forwards running;
 }
+@keyframes title-text-rotate {
+    0% { transform: rotateZ(0deg); }
+    25% { transform: rotateZ(90deg); }
+    50% { transform: rotateZ(180deg); }
+    75% { transform: rotateZ(270deg); }
+    100% { transform: rotateZ(360deg); }
+}
 @keyframes title-text-fadein {
     0% { opacity: 0; }
     /* about 4s~ */
@@ -87,13 +87,15 @@ body {
 #title-main-text {
     text-align: center;
     font-size: 8vmin;
-    animation: title-text-fadein 4.5s ease-in-out 0s 1 normal forwards running;
+    animation: title-text-rotate 1s ease-in-out 3.5s 1 normal forwards running,
+                title-text-fadein 4.5s ease-in-out 0s 1 normal forwards running;
 }
 #title-sub-text {
     text-align: center;
     font-size: 2vmin;
     color: var(--gray);
-    animation: title-text-fadein 4.5s ease-in-out 0s 1 normal forwards running;
+    animation: title-text-rotate 1s ease-in-out 3.5s 1 normal forwards running,
+                title-text-fadein 4.5s ease-in-out 0s 1 normal forwards running;
 }
 
 .main-center {
