--- a/css/index.css
+++ b/css/index.css
@@ -84,14 +84,14 @@ body {
 #title-main-text {
     text-align: center;
     font-size: 8vmin;
-    animation: title-text-rotate 0.4s linear 3.8s 1 normal forwards running,
+    animation: title-text-rotate 0.4s ease 3.8s 1 normal forwards running,
                 title-text-fadein 4.2s ease-in-out 0s 1 normal forwards running;
 }
 #title-sub-text {
     text-align: center;
     font-size: 2vmin;
     color: var(--gray);
-    animation: title-text-rotate 0.4s linear 3.8s 1 normal forwards running,
+    animation: title-text-rotate 0.4s ease 3.8s 1 normal forwards running,
                 title-text-fadein 4.2s ease-in-out 0s 1 normal forwards running;
 }
 
