--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,17 @@ body {
     font-size: 28px;
 }
 
+.main-center {
+    text-align: center;
+    font-size: 8vmin;
+}
+.sub-center {
+    text-align: center;
+    font-size: 2vmin;
+    color: var(--gray);
+}
 
+/* タイトル */
 #title {
     height: 100%;
     padding-top: 25vh;
@@ -95,16 +105,15 @@ body {
                 title-text-fadein 4.2s ease-in-out 0s 1 normal forwards running;
 }
 
-.main-center {
-    text-align: center;
-    font-size: 8vmin;
-}
-.sub-center {
-    text-align: center;
-    font-size: 2vmin;
-    color: var(--gray);
+/* 自己紹介 */
+#my-image {
+    margin: auto;
+    background-image: url("../images/2019_Mokuichi.png");
+    width: 40vmin;
+    height: 40vmin;
 }
 
+/* レスポンシブデザイン */
 @media screen and (max-width: 500px) {
     /* スマートフォン */
     
