アイコンを回転させる

--- a/css/index.css
+++ b/css/index.css
@@ -106,12 +106,17 @@ body {
 }
 
 /* 自己紹介 */
-#my-image {
+@keyframes icon-rotate{
+    0% { transform: rotateZ(0deg); }
+    100% { transform: rotateZ(360deg); }
+}
+#icon-image {
     margin: 5vmin auto;
     background-image: url("../images/2019_Mokuichi.png");
     background-size: contain;
     width: 40vmin;
     height: 40vmin;
+    animation: icon-rotate 1s ease 9s infinite normal forwards running;
 }
 
 /* レスポンシブデザイン */
