左寄せに変更

--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,7 @@ body {
     font-size: 8vmin;
 }
 .sub-center {
-    text-align: center;
+    text-align: left;
     font-size: 5vmin;
     margin: 0px auto;
     width: 80vmin;
