要素のサイズ指定

--- a/css/index.css
+++ b/css/index.css
@@ -138,18 +138,30 @@ body {
 #sns-twitter {
     background-image: var(--Twitter-icon);
     order: 0;
+    background-size: contain;
+    width: 10vmin;
+    height: 10vmin;
 }
 #sns-note {
     background-image: var(--note-icon);
     order: 1;
+    background-size: contain;
+    width: 10vmin;
+    height: 10vmin;
 }
 #sns-github {
     background-image: var(--GitHub-icon);
     order: 2;
+    background-size: contain;
+    width: 10vmin;
+    height: 10vmin;
 }
 #sns-instagram {
     background-image: var(--Instagram-icon);
     order: 3;
+    background-size: contain;
+    width: 10vmin;
+    height: 10vmin;
 }
 
 /* レスポンシブデザイン */
