--- a/css/index.css
+++ b/css/index.css
@@ -133,7 +133,7 @@ body {
 /* SNSリンク */
 #sns-container {
     width: 60vmin;
-    margin: 0px auto;
+    margin: 0px auto 20vh;
     display: flex;
     justify-content: space-between;
 }
