--- a/css/index.css
+++ b/css/index.css
@@ -54,8 +54,7 @@ body {
 /* タイトル */
 #title {
     height: 100%;
-    padding-top: 25vh;
-    padding-bottom: 40vh;
+    padding: calc(50vh - 35vmin) 0px;
 }
 @keyframes title-circle-edge-scale {
     0% { transform: scale(0, 0); }
@@ -180,9 +179,5 @@ body {
 
 @media screen and (min-width: 1025px) {
     /* タブレット横、PC */
-    #title {
-        height: 100%;
-        padding-top: 15vh;
-        padding-bottom: 40vh;
-    }
+    
 }
