--- a/css/index.css
+++ b/css/index.css
@@ -135,7 +135,8 @@ p {
     display: block;
 }
 #icon-circle {
-    stroke-width: 10;
+    fill-opacity: 0;
+    stroke-width: 3vmin;
 }
 
 /* SNSリンク */
