--- a/css/index.css
+++ b/css/index.css
@@ -122,6 +122,9 @@ p {
     fill-opacity: 0;
     stroke: var(--text);
     stroke-width: 2vmin;
+    stroke-linecap: round;
+    stroke-dashoffset: 0;
+    stroke-dasharray: calc(6.2831843 * 19vmin / 6);
 }
 
 /* SNSリンク */
