--- a/css/index.css
+++ b/css/index.css
@@ -124,7 +124,7 @@ p {
     stroke-width: 2vmin;
     stroke-linecap: round;
     stroke-dashoffset: 0;
-    stroke-dasharray: calc(6.2831843 * 19vmin / 6);
+    stroke-dasharray: calc(6.2831843 * 47% / 6);
 }
 
 /* SNSリンク */
