circleのみの回転

--- a/css/index.css
+++ b/css/index.css
@@ -112,20 +112,15 @@ p {
 }
 
 /* 自己紹介 */
-@keyframes icon-rotate {
-    0% { transform: rotateZ(0deg) }
-    100% { transform: rotateZ(360deg) }
-}
 #icon {
     margin: 4vmin auto;
     width: 40vmin;
     height: 40vmin;
     display: block;
-    animation: icon-rotate 1s ease-in-out 0s infinite normal forwards;
-    animation-play-state: paused;
 }
-#icon:hover {
-    animation-play-state: running;
+@keyframes icon-circle-rotate {
+    0% { transform: rotateZ(0deg) }
+    100% { transform: rotateZ(360deg) }
 }
 #icon-circle {
     fill-opacity: 0;
@@ -134,6 +129,11 @@ p {
     stroke-linecap: round;
     stroke-dashoffset: 0;
     stroke-dasharray: calc(6.2831843 * 47% / 6);
+    animation: icon-circle-rotate 1s ease-in-out 0s infinite normal forwards;
+    animation-play-state: paused;
+}
+#icon:hover #icon-circle {
+    animation-play-state: running;
 }
 
 /* SNSリンク */
