--- a/css/index.css
+++ b/css/index.css
@@ -57,36 +57,12 @@ p {
 
 /* タイトル */
 #title {
-    height: 100%;
-    padding: calc(50vh - 35vmin) 0px calc(80vh - 35vmin);
-}
-@keyframes title-circle-edge-scale {
-    0%,50% { transform: scale(0, 0); }
-    95% { transform: scale(1.1, 1.1); }
-    100% { transform: scale(1, 1); }
-}
-@keyframes title-circle-edge-rotate {
-    0%,10% { transform: rotateZ(0deg); }
-    80% { transform: rotateZ(-45deg); }
-    100% { transform: rotateZ(0deg); }
-}
-#title-circle-edge {
-    margin: auto;
-    width: 70vmin;
-    height: 70vmin;
-    border-radius: 50%;
-    background: linear-gradient(135deg, var(--main) 50%, var(--accent) 50%);
-    animation: title-circle-edge-scale 2s ease-in-out 0s 1 normal forwards,
-                title-circle-edge-rotate 1s ease-in-out 2s 1 normal forwards;
-}
-#title-circle {
-    margin: auto;
-    padding: 20vmin 0vmin;
-    width: 60vmin;
-    height: 20vmin;
-    border-radius: 50%;
-    background-color: var(--back);
-    transform: translateY(5vmin);
+    background-image: url("../images/mountain_lite.svg");
+    background-size: cover;
+    background-position: center bottom;
+    padding-top: calc(50vh - 9vmin);
+    height: calc(50vh + 9vmin);
+    width: 100vw;
 }
 @keyframes title-text-rotate {
     0.1% { transform: rotateZ(-90deg); }
