--- a/css/index.css
+++ b/css/index.css
@@ -146,11 +146,12 @@ p {
     stroke-dashoffset: 0;
     stroke-dasharray: calc(6.2831843 * 47% / 12) calc(6.2831843 * 47% / 4);
     animation: icon-circle-rotate 3s linear 0s infinite normal forwards,
-                icon-circle-anim 1s ease-in-out 0s infinite normal forwards;
-    animation-play-state: paused;
+                icon-circle-anim 2s ease-in-out 0s infinite normal forwards;
+    animation-play-state: running;
 }
 #icon:hover #icon-circle {
-    animation-play-state: running;
+    animation-play-state: paused;
+    stroke: var(--accent);
 }
 
 /* SNSリンク */
