--- a/css/index.css
+++ b/css/index.css
@@ -2,11 +2,13 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+SC:700');
 
 :root {
-    --back: #F0F0F0;
-    --text: #1A1A1A;
+    --white: #F0F0F0;
     --gray: #b6b6b6;
+    --black: #1A1A1A;
     --main: #6b7d27;
     --accent: #ee4b22;
+    --back: var(--white);
+    --text: var(--black);
     --GitHub-icon: url("../images/GitHub_black.png");
     --Instagram-icon: url("../images/Instagram_black.png");
     --Twitter-icon: url("../images/Twitter_black.png");
@@ -14,14 +16,14 @@
 }
 @media (prefers-color-scheme: light) {
     :root {
-        --back: #F0F0F0;
-        --text: #1A1A1A;
+        --back: var(--white);
+        --text: var(--black);
     }
 }
 @media (prefers-color-scheme: dark) {
     :root {
-        --back: #1A1A1A;
-        --text: #F0F0F0;
+        --back: var(--black);
+        --text: var(--white);
         --GitHub-icon: url("../images/GitHub_white.png");
         --Instagram-icon: url("../images/Instagram_white.png");
         --Twitter-icon: url("../images/Twitter_white.png");
@@ -76,6 +78,7 @@ p {
 #title-main-text {
     text-align: center;
     font-size: 10vmin;
+    color: var(--white);
     animation: title-text-rotate 0.4s ease 2.8s 1 normal forwards running,
                 title-text-fadein 3.2s ease-in-out 0s 1 normal forwards running;
 }
