細かい色の調整

--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@
 :root {
     --back: #F0F0F0;
     --text: #1A1A1A;
-    --gray: #b6b6b6;
+    --gray: #999999;
     --main: #6b7d27;
     --accent: #ee4b22;
     --GitHub-icon: url("../images/GitHub_black.png");
