--- a/css/index.css
+++ b/css/index.css
@@ -71,7 +71,7 @@ p {
     100% { transform: translateX(0vw); }
 }
 @keyframes title-text-fadein {
-    0% { opacity: 0; }
+    0%,50% { opacity: 0; }
     100% { opacity: 1; }
 }
 #title-main-text {
@@ -79,14 +79,14 @@ p {
     font-size: 10vmin;
     color: var(--white);
     animation: title-text-translate 1s ease 1s 1 normal forwards,
-                title-text-fadein 1s ease-in-out 1s 1 normal forwards;
+                title-text-fadein 2s ease-in-out 0s 1 normal forwards;
 }
 #title-sub-text {
     text-align: center;
     font-size: 3vmin;
     color: var(--white);
     animation: title-text-translate 1s ease 1s 1 normal forwards,
-                title-text-fadein 1s ease-in-out 1s 1 normal forwards;
+                title-text-fadein 2s ease-in-out 0s 1 normal forwards;
 }
 
 /* 自己紹介 */
