--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,8 @@ p {
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     overflow: hidden;
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
 }
 @keyframes title-text-translate {
     0% { transform: translateX(20vw); }
@@ -150,6 +152,8 @@ p {
     background-size: contain;
     width: 5vmin;
     height: 5vmin;
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
 }
 #sns-note {
     background-image: var(--note-icon);
@@ -157,6 +161,8 @@ p {
     background-size: contain;
     width: 5vmin;
     height: 5vmin;
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
 }
 #sns-github {
     background-image: var(--GitHub-icon);
@@ -164,6 +170,8 @@ p {
     background-size: contain;
     width: 5vmin;
     height: 5vmin;
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
 }
 #sns-instagram {
     background-image: var(--Instagram-icon);
@@ -171,6 +179,8 @@ p {
     background-size: contain;
     width: 5vmin;
     height: 5vmin;
+    -webkit-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
 }
 
 /* 制作物 */
