--- a/css/index.css
+++ b/css/index.css
@@ -179,17 +179,19 @@ p {
 }
 
 /* レスポンシブデザイン */
-@media screen and (max-width: 500px) {
-    /* スマートフォン */
-    
+@media screen and (min-width: 501px) and (max-width: 900px) and (orientation: landscape) {
+    /* スマホ横 */
+    .sub-center {
+        font-size: 3vmin;
+    }
 }
 
-@media screen and (min-width: 500px) and (max-width: 1000px) {
+@media screen and (min-width: 501px) and (max-width: 1050px) and (orientation: portrait) {
     /* タブレット縦 */
     
 }
 
-@media screen and (min-width: 1001px) {
+@media screen and (min-width: 901px) {
     /* タブレット横、PC */
     .sub-center {
         font-size: 3vmin;
