--- a/css/index.css
+++ b/css/index.css
@@ -179,19 +179,13 @@ p {
 }
 
 /* レスポンシブデザイン */
-@media screen and (min-width: 501px) and (max-width: 900px) and (orientation: landscape) {
-    /* スマホ横 */
-    .sub-center {
-        font-size: 3vmin;
-    }
-}
 
-@media screen and (min-width: 501px) and (max-width: 1050px) and (orientation: portrait) {
+@media screen and (min-width: 501px) and (max-width: 800px) {
     /* タブレット縦 */
     
 }
 
-@media screen and (min-width: 901px) {
+@media screen and (min-width: 801px) {
     /* タブレット横、PC */
     .sub-center {
         font-size: 3vmin;
