--- a/css/index.css
+++ b/css/index.css
@@ -179,13 +179,17 @@ p {
 }
 
 /* レスポンシブデザイン */
+@media screen and (max-width: 500px) {
+    /* スマートフォン */
+    
+}
 
-@media screen and (min-width: 501px) and (max-width: 800px) {
+@media screen and (min-width: 501px) and (max-width: 900px) {
     /* タブレット縦 */
     
 }
 
-@media screen and (min-width: 801px) {
+@media screen and (min-width: 901px) {
     /* タブレット横、PC */
     .sub-center {
         font-size: 3vmin;
