--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,7 @@ body {
     padding: 0px;
     font-family: 'Noto Sans SC', sans-serif;
     font-weight: bold;
-    font-size: 1vh;
+    font-size: 28px;
 }
 
 p {
@@ -61,8 +61,8 @@ p {
 
 /* タイトル */
 #title {
-    padding-top: calc(50em - 15vmin);
-    height: calc(50em + 15vmin);
+    padding-top: calc(50vh - 15vmin);
+    height: calc(50vh + 15vmin);
     width: 100vw;
     background-size: cover;
     background-position: left bottom;
