--- a/css/index.css
+++ b/css/index.css
@@ -81,25 +81,15 @@ p {
     width: 100%;
     height: 100%;
 }
-@keyframes title-text-translate {
-    0.1% { transform: translateX(20vw); }
-    100% { transform: translateX(0vw); }
-}
-@keyframes title-text-fadein {
-    0%,50% { opacity: 0; }
-    100% { opacity: 1; }
-}
 #title-main-text {
     font-size: 10vmin;
     fill: var(--white);
-    animation: title-text-translate 1s ease 1s 1 normal forwards,
-                title-text-fadein 2s ease-in-out 0s 1 normal forwards;
+    transform: translate(50vw, 50vh);
 }
 #title-sub-text {
     font-size: 3vmin;
     fill: var(--white);
-    animation: title-text-translate 1s ease 1s 1 normal forwards,
-                title-text-fadein 2s ease-in-out 0s 1 normal forwards;
+    transform: translate(50vw, 53.5vh);
 }
 
 /* 自己紹介 */
